# SingularityEngine

./: .gitignore  CMakeLists.txt  README.md
docs/: Doxyfile
include/Singularity/: Behavior.hpp  Component.hpp  Engine.hpp  Entity.hpp  Object.hpp
include/Singularity/Components/: Curses3Renderer.hpp  CursesRenderer.hpp
include/Singularity/Geometry/: Quaternion.hpp  Transform.hpp  Vector2.hpp  Vector3.hpp  Vector4.hpp
include/Singularity/Graphics/: Curses.hpp  Curses3.hpp  Curses3Renderer.hpp  CursesRenderer.hpp  MeshRenderer.hpp
src/: Behavior.cpp  Curses.cpp  Curses3.cpp  Engine.cpp  Entity.cpp  Object.cpp  Quaternion.cpp  Transform.cpp
src/Base/: Component.cpp  Entity.cpp  MeshRenderer.cpp  Transform.cpp  Vector2.cpp  Vector3.cpp  Vector4.cpp
src/Curses/: Curses.cpp  Curses3.cpp
